# cpp_design_patterns

./: .gitignore  CMakeLists.txt  README.md
message_queue/: CMakeLists.txt
message_queue/include/: message_queue.h  msg.h  request.h
message_queue/src/: message_queue.cpp  message_queue_request_test.cpp  message_queue_test.cpp  msg.cpp
mvc_example/: CMakeLists.txt  README.md
mvc_example/include/: Observer.h  StudentController.h  StudentModel.h  StudentModelInterface.h  StudentView.h  Subject.h
mvc_example/src/: StudentController.cpp  StudentModel.cpp  StudentView.cpp  main_mvc_test.cpp
ringbuffer_example/: CMakeLists.txt
ringbuffer_example/include/: ringbuffer.h
ringbuffer_example/src/: ringbuffer.cpp  test_ringbuffer.cpp
